doc/3.9/Reference.md
---
layout: default
title: "Reference"
---

# Reference

<div style="column-count:3" markdown="1">

* [`<AccordionForm>`](https://marmelab.com/ra-enterprise/modules/ra-form-layout#accordionform)<img class="icon" src="./img/premium.svg" />
* `<Actions>`
* [`<Admin>`](./Admin.md)
* `<AdminRoutes>`
* [`<AppBar>`](./Theming.md#customizing-the-appbar-content)
* [`<ArrayField>`](./Fields.md#arrayfield)
* [`<ArrayInput>`](./Inputs.md#arrayinput)
* [`<Authenticated>`](./Authentication.md#useauthenticated-hook)
* [`<AutocompleteArrayInput>`](./Inputs.md#autocompletearrayinput)
* [`<AutocompleteInput>`](./Inputs.md#autocompleteinput)
* [`<Breadcrumb>`](https://marmelab.com/ra-enterprise/modules/ra-navigation#breadcrumb-adding-a-breadcrumb-path-to-every-page)<img class="icon" src="./img/premium.svg" />
* [`<BreadcrumbItem>`](https://marmelab.com/ra-enterprise/modules/ra-navigation#the-breadcrumbitem-component)<img class="icon" src="./img/premium.svg" />
* [`<BooleanField>`](./Fields.md#booleanfield)
* [`<BooleanInput>`](./Inputs.md#booleaninput-and-nullablebooleaninput)
* [`<BulkDeleteButton>`](./List.md#bulk-action-buttons)
* [`<BulkExportButton>`](./List.md#bulk-action-buttons)
* [`<CheckboxGroupInput>`](./Inputs.md#checkboxgroupinput)
* [`<ChipField>`](./Fields.md#chipfield)
* `<CloneButton>`
* `<Confirm>`
* [`<Create>`](./CreateEdit.md#the-create-and-edit-components)
* `<CreateActions>`
* `<CreateButton>`
* [`<CreateDialog>`](https://marmelab.com/ra-enterprise/modules/ra-form-layout#createdialog--editdialog)<img class="icon" src="./img/premium.svg" />
* `<DashboardMenuItem>`
* [`<Datagrid>`](./List.md#the-datagrid-component)
* `<DatagridBody>`
* `<DatagridCell>`
* `<DatagridHeaderCell>`
* [`<DateField>`](./Fields.md#datefield)
* [`<DateInput>`](./Inputs.md#dateinput)
* [`<DateTimeInput>`](./Inputs.md#datetimeinput)
* `<DeleteButton>`
* [`<DualListInput>`](https://marmelab.com/ra-enterprise/modules/ra-relationships#duallistinput)<img class="icon" src="./img/premium.svg" />
* [`<Edit>`](./CreateEdit.md#the-create-and-edit-components)
* [`<EditableDatagrid>`](https://marmelab.com/ra-enterprise/modules/ra-editable-datagrid)<img class="icon" src="./img/premium.svg" />
* [`<EditGuesser>`](./CreateEdit.md#the-editguesser-component)
* `<EditActions>`
* `<EditButton>`
* [`<EditDialog>`](https://marmelab.com/ra-enterprise/modules/ra-form-layout#createdialog--editdialog)<img class="icon" src="./img/premium.svg" />
* [`<EmailField>`](./Fields.md#emailfield)
* [`<FileField>`](./Fields.md#filefield)
* [`<FileInput>`](./Inputs.md#fileinput)
* [`<Filter>`](./List.md#filters)
* `<FilterButton>`
* `<FilterForm>`
* [`<FilterList>`](./List.md#the-filterlist-sidebar)
* [`<FilterListItem>`](./List.md#the-filterlist-sidebar)
* [`<FilterLiveSearch>`](./List.md#live-search)
* [`<FormDataConsumer>`](./Inputs.md#linking-two-inputs)
* [`<FormTab>`](./CreateEdit.md#the-tabbedform-component)
* [`<FunctionField>`](./Fields.md#functionfield)
* [`<ImageField>`](./Fields.md#imagefield)
* [`<ImageInput>`](./Inputs.md#imageinput)
* [`<ImageInputPreview>`](./Inputs.md#imageinput)
* `<Labeled>`
* [`<LanguageSwitcher>`](https://marmelab.com/ra-enterprise/modules/ra-preferences#languageswitcher-store-the-locale-in-preferences)<img class="icon" src="./img/premium.svg" />
* [`<Layout>`](./Theming.md#using-a-custom-layout)
* [`<Loading>`](./Theming.md#Loading)
* [`<Logout>`](./Theming.md#using-a-custom-logout-button)
* [`<List>`](./List.md#the-list-component)
* [`<ListGuesser>`](./List.md#the-listguesser-component)
* `<ListButton>`
* [`<MarkdownField>`](https://marmelab.com/ra-enterprise/modules/ra-markdown#markdownfield)<img class="icon" src="./img/premium.svg" />
* [`<MarkdownInput>`](https://marmelab.com/ra-enterprise/modules/ra-markdown#markdowninput)<img class="icon" src="./img/premium.svg" />
* [`<Menu>`](./Theming.md#using-a-custom-menu)
* [`<MultiLevelMenu>`](https://marmelab.com/ra-enterprise/modules/ra-navigation#multilevelmenu-replacing-the-default-menu-by-a-multi-level-one)<img class="icon" src="./img/premium.svg" />
* [`<Mutation>`](./Actions.md#legacy-components-query-mutation-and-withdataprovider)
* `<Notification>`
* [`<NullableBooleanInput>`](./Inputs.md#booleaninput-and-nullablebooleaninput)
* [`<NumberField>`](./Fields.md#numberfield)
* [`<NumberInput>`](./Inputs.md#numberinput)
* [`<Pagination>`](./List.md#the-pagination-component)
* [`<PasswordInput>`](./Inputs.md#passwordinput)
* [`<PreferencesSetter>`](https://marmelab.com/ra-enterprise/modules/ra-preferences#preferencessetter-setting-preferences-declaratively)<img class="icon" src="./img/premium.svg" />
* [`<Query>`](./Actions.md#legacy-components-query-mutation-and-withdataprovider)
* [`<RadioButtonGroupInput>`](./Inputs.md#radiobuttongroupinput)
* [`<RealTimeEdit>`](https://marmelab.com/ra-enterprise/modules/ra-realtime#real-time-views-list-edit-show)<img class="icon" src="./img/premium.svg" />
* [`<RealTimeList>`](https://marmelab.com/ra-enterprise/modules/ra-realtime#real-time-views-list-edit-show)<img class="icon" src="./img/premium.svg" />
* [`<RealTimeMenu>`](https://marmelab.com/ra-enterprise/modules/ra-realtime#realtimemenu)<img class="icon" src="./img/premium.svg" />
* [`<RealTimeShow>`](https://marmelab.com/ra-enterprise/modules/ra-realtime#real-time-views-list-edit-show)<img class="icon" src="./img/premium.svg" />
* [`<ReferenceArrayField>`](./Fields.md#referencearrayfield)
* [`<ReferenceArrayInput>`](./Inputs.md#referencearrayinput)
* [`<ReferenceField>`](./Fields.md#referencefield)
* [`<ReferenceInput>`](./Inputs.md#referenceinput)
* [`<ReferenceManyField>`](./Fields.md#referencemanyfield)
* [`<ReferenceManyToManyField>`](https://marmelab.com/ra-enterprise/modules/ra-relationships#referencemanytomanyfield)<img class="icon" src="./img/premium.svg" />
* [`<ReferenceManyToManyInput>`](https://marmelab.com/ra-enterprise/modules/ra-relationships#referencemanytomanyinput)<img class="icon" src="./img/premium.svg" />
* `<RefreshButton>`
* [`<Resource>`](./Resource.md#the-resource-component)
* [`<RichTextField>`](./Fields.md#richtextfield)
* [`<RichTextInput>`](./Inputs.md#richtextinput)
* [`<RowForm>`](https://marmelab.com/ra-enterprise/modules/ra-editable-datagrid#rowform)<img class="icon" src="./img/premium.svg" />
* `<SaveButton>`
* `<SearchInput>`
* [`<SelectArrayInput>`](./Inputs.md#selectarrayinput)
* [`<SelectColumnsButton>`](https://marmelab.com/ra-enterprise/modules/ra-preferences#selectcolumnsbutton-store-datagrid-columns-in-preferences)<img class="icon" src="./img/premium.svg" />
* [`<SelectField>`](./Fields.md#selectfield)
* [`<SelectInput>`](./Inputs.md#selectinput)
* [`<Show>`](./Show.md#the-show-component)
* [`<ShowGuesser`](./Show.md#the-showguesser-component)
* `<ShowButton>`
* `<Sidebar>`
* [`<SidebarOpenPreferenceSync>`](https://marmelab.com/ra-enterprise/modules/ra-preferences#sidebaropenpreferencesync-store-the-sidebar-openclose-state-in-preferences)<img class="icon" src="./img/premium.svg" />
* `<SimpleList>`
* [`<SimpleForm>`](./CreateEdit.md#the-simpleform-component)
* [`<SimpleFormIterator>`](./Inputs.md#arrayinput)
* [`<SimpleList>`](./List.md#the-simplelist-component)
* [`<SimpleShowLayout>`](./Show.md#the-simpleshowlayout-component)
* [`<SingleFieldList>`](./List.md#the-singlefieldlist-component)
* [`<SortButton>`](./List.md#the-sortbutton-component)
* `<Tab>`
* [`<TabbedForm>`](./CreateEdit.md#the-tabbedform-component)
* [`<TabbedShowLayout>`](./Show.md#the-tabbedshowlayout-component)
* [`<TestContext>`](./UnitTesting.md#testing-custom-views)
* [`<TextField>`](./Fields.md#textfield)
* [`<TextInput>`](./Inputs.md#textinput)
* `<Title>`
* [`<ToggleThemeButton>`](https://marmelab.com/ra-enterprise/modules/ra-preferences#togglethemebutton-store-the-theme-in-the-preferences)<img class="icon" src="./img/premium.svg" />
* [`<TourProvider>`](https://marmelab.com/ra-enterprise/modules/ra-tour)<img class="icon" src="./img/premium.svg" />
* [`<Tree>`](https://marmelab.com/ra-enterprise/modules/ra-tree#tree-component)<img class="icon" src="./img/premium.svg" />
* [`<TreeWithDetails>`](https://marmelab.com/ra-enterprise/modules/ra-tree#treewithdetails-component)<img class="icon" src="./img/premium.svg" />
* [`translate`](./Translation.md#withtranslate-hoc)
* `<Toolbar>`
* `<TopToolbar>`
* [`<UrlField>`](./Fields.md#urlfield)
* [`<WizardForm>`](https://marmelab.com/ra-enterprise/modules/ra-form-layout#wizardform)<img class="icon" src="./img/premium.svg" />
* [`useAppLocationState`](https://marmelab.com/ra-enterprise/modules/ra-navigation#useapplocationstate-retrieve-and-define-app-location)<img class="icon" src="./img/premium.svg" />
* [`useAppLocationMatcher`](https://marmelab.com/ra-enterprise/modules/ra-navigation#useapplocationmatcher-apply-a-matching-on-the-current-app-location)<img class="icon" src="./img/premium.svg" />
* [`useAuthenticated`](./Authentication.md#useauthenticated-hook)
* `useAuthProvider`
* [`useAuthState`](./Authentication.md#useauthstate-hook)
* `useCheckAuth`
* `useChoices`
* [`useCreate`](./Actions.md#specialized-hooks)
* [`useCreateController`](./CreateEdit.md#usecreatecontroller)
* [`useDataProvider`](./Actions.md#usedataprovider-hook)
* [`useDelete`](./Actions.md#specialized-hooks)
* [`useDeleteMany`](./Actions.md#specialized-hooks)
* [`useEditController`](./CreateEdit.md#useeditcontroller)
* `useFilterState`
* [`useGetList`](./Actions.md#specialized-hooks)
* [`useGetMany`](./Actions.md#specialized-hooks)
* [`useGetManyReference`](./Actions.md#specialized-hooks)
* `useGetMatching`
* `useGetMatchingReferences`
* [`useGetOne`](./Actions.md#specialized-hooks)
* `useGetPermissions`
* [`useHasLock`](https://marmelab.com/ra-enterprise/modules/ra-realtime#locks-on-content)<img class="icon" src="./img/premium.svg" />
* [`useHasLocks`](https://marmelab.com/ra-enterprise/modules/ra-realtime#locks-on-content)<img class="icon" src="./img/premium.svg" />
* `useInput`
* [`useListController`](./List.md#uselistcontroller)
* `useListParams`
* `useLoading`
* [`useLocale`](./Translation.md#uselocale-getting-the-current-locale)
* [`useLock`](https://marmelab.com/ra-enterprise/modules/ra-realtime#locks-on-content)<img class="icon" src="./img/premium.svg" />
* [`useLogin`](./Authentication.md#customizing-the-login-and-logout-components)
* [`useLogout`](./Authentication.md#customizing-the-login-and-logout-components)
* `useLogoutIfAccessDenied`
* [`useMediaQuery`](./Theming.md#usemediaquery-hook)
* [`useMutation`](./Actions.md#usemutation-hook)
* [`useNotify`](./Actions.md#handling-side-effects-in-usedataprovider)
* `usePaginationState`
* [`usePermissions`](./Authorization.md#usepermissions-hook)
* [`usePreferences`](https://marmelab.com/ra-enterprise/modules/ra-preferences#usepreferences-reading-and-writing-user-preferences)<img class="icon" src="./img/premium.svg" />
* [`useQuery`](./Actions.md#usequery-hook)
* [`useQueryWithStore`](./Actions.md#usequerywithstore-hook)
* [`useRedirect`](./Actions.md#handling-side-effects-in-usedataprovider)
* [`useResourceAppLocation`](https://marmelab.com/ra-enterprise/modules/ra-navigation#useresourceapplocation-access-current-resource-app-location)<img class="icon" src="./img/premium.svg" />
* `useReference`
* `useReferenceArrayFieldController`
* `useReferenceArrayInputController`
* `useReferenceInputController`
* `useReferenceManyFieldController`
* [`useRefresh`](./Actions.md#handling-side-effects-in-usedataprovider)
* [`useSetLocale`](./Translation.md#usesetlocale-changing-locale-at-runtime)
* [`useShowController`](./Show.md#useshowcontroller)
* `useSortState`
* [`useStyles`](./Theming.md#overriding-a-component-style)
* `useSuggestions`
* [`useTour`](https://marmelab.com/ra-enterprise/modules/ra-tour)<img class="icon" src="./img/premium.svg" />
* [`useTranslate`](./Translation.md#usetranslate-hook)
* [`useUpdate`](./Actions.md#specialized-hooks)
* `useUpdateLoading`
* [`useUpdateMany`](./Actions.md#specialized-hooks)
* [`useUnselectAll`](./Actions.md#handling-side-effects-in-usedataprovider)
* [`useWarnWhenUnsavedChanges`](./CreateEdit.md#warning-about-unsaved-changes)
* `useVersion`
* [`withDataProvider`](./Actions.md#legacy-components-query-mutation-and-withdataprovider)
* [`withTranslate`](./Translation.md#withtranslate-hoc)
* [`<WithPermissions>`](./Authorization.md#usepermissions-hook)

</div>
